[gd_scene load_steps=6 format=3 uid="uid://04mnm5xtfgbm"]

[ext_resource type="Script" path="res://scnee/STRUM2.gd" id="1_s31l0"]
[ext_resource type="PackedScene" uid="uid://cck88iincnkp3" path="res://assets/note skin/strumline.tscn" id="2_qrf2k"]
[ext_resource type="Texture2D" uid="uid://dwc27ofecoi28" path="res://assets/images/arrow.png" id="3_qkrhj"]
[ext_resource type="Texture2D" uid="uid://d1vjwd1ahhqdj" path="res://assets/images/[paushe vubton.png" id="4_dmlh6"]
[ext_resource type="Texture2D" uid="uid://dbstfyhlp4rrg" path="res://assets/images/[paushe vubton pushed.png" id="5_y4ww8"]

[node name="Normal Notes" type="Node2D"]
visible = false
script = ExtResource("1_s31l0")

[node name="strumline" parent="." instance=ExtResource("2_qrf2k")]
position = Vector2(388, 0)

[node name="Player Note" type="Node2D" parent="."]
position = Vector2(388, 256)

[node name="Mobile Shit" type="Node2D" parent="."]
visible = false
modulate = Color(0.686275, 0, 0.686275, 1)

[node name="Left" type="TouchScreenButton" parent="Mobile Shit"]
modulate = Color(1, 0.0392157, 0.0392157, 0.419608)
position = Vector2(18, 178)
texture_normal = ExtResource("3_qkrhj")
passby_press = true
action = "gameplay_0"

[node name="Left2" type="TouchScreenButton" parent="Mobile Shit"]
modulate = Color(1, 0.0392157, 0.0392157, 0.419608)
position = Vector2(299, 442)
rotation = -1.5708
texture_normal = ExtResource("3_qkrhj")
passby_press = true
action = "gameplay_1"

[node name="Left3" type="TouchScreenButton" parent="Mobile Shit"]
modulate = Color(1, 0.0392157, 0.0392157, 0.419608)
position = Vector2(864, 188)
rotation = 1.5708
texture_normal = ExtResource("3_qkrhj")
passby_press = true
action = "gameplay_2"

[node name="Left4" type="TouchScreenButton" parent="Mobile Shit"]
modulate = Color(1, 0.0392157, 0.0392157, 0.419608)
position = Vector2(1162, 445)
rotation = 3.14159
texture_normal = ExtResource("3_qkrhj")
passby_press = true
action = "gameplay_3"

[node name="TouchScreenButton" type="TouchScreenButton" parent="Mobile Shit"]
position = Vector2(1047, -2)
scale = Vector2(0.13, 0.13)
texture_normal = ExtResource("4_dmlh6")
texture_pressed = ExtResource("5_y4ww8")

[connection signal="pressed" from="Mobile Shit/Left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="Mobile Shit/Left2" to="." method="_on_left_2_pressed"]
[connection signal="pressed" from="Mobile Shit/Left3" to="." method="_on_left_3_pressed"]
[connection signal="pressed" from="Mobile Shit/Left4" to="." method="_on_left_4_pressed"]
[connection signal="pressed" from="Mobile Shit/TouchScreenButton" to="." method="_on_touch_screen_button_pressed"]
[connection signal="released" from="Mobile Shit/TouchScreenButton" to="." method="_on_touch_screen_button_released"]
